--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,13 @@ body{
   margin-top: 2%;
   width: 100%;
   float: right;
+  text-align: center;
+  font-size: 1.3rem;
+}
+.card-header {
+  font-family: 'Metal Mania', cursive;
+  text-shadow: 2px 2px red;
+  font-size: 3rem;
 }
 .jumbotron {
   font-family: 'Metal Mania', cursive;
