--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
   margin-left: 10%;
   width: 80%;
   padding-top: 100%;
-  text-shadow: 1px 1px black;
+  text-shadow: 2px 2px black;
 }
 .sharn{
   border-radius: 45px 55px 65px 65px;
@@ -22,7 +22,6 @@ body{
   margin-left: 11%;
   width: 76.5%;
   padding-top: 99%;
-  text-shadow: 1px 1px black;
 }
 .Apok{
   border-radius: 45px 55px 65px 65px;
@@ -35,7 +34,18 @@ body{
   margin-right: 3%;
   width: 93%;
   padding-top: 129%;
-  text-shadow: 1px 1px black;
+}
+.Silvertone{
+  border-radius: 45px 55px 65px 65px;
+  border: 5px groove burlywood;
+  background-image: url(./components/images/Silvertone.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 93.5%;
+  padding-top: 123%;
 }
 .card {
   margin-top: 2%;
@@ -57,12 +67,12 @@ body{
   top: 5%;
   background-color: transparent;
   text-align: center;
-  color: tomato;
+  color: rgb(255, 154, 71);
 }
 h1{
-  font-size: xx-large;
+  font-size: x-large;
 }
 .Oswald{
   font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
