home page styling edits

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,9 @@ body{
   background-size: contain;
   background-repeat: no-repeat;
   margin-top: 3%;
-  margin-left: 10%;
-  width: 80%;
-  padding-top: 100%;
-  text-shadow: 2px 2px black;
+  width: 100%;
+  padding-top: 125%;
+  
 }
 .sharn{
   border-radius: 45px 55px 65px 65px;
@@ -47,6 +46,18 @@ body{
   width: 93.5%;
   padding-top: 123%;
 }
+.Keys{
+  border-radius: 45px 55px 65px 65px;
+  border: 5px groove burlywood;
+  background-image: url(./components/images/Keys.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 90%;
+  padding-top: 125.4%;
+}
 .card {
   margin-top: 2%;
   width: 100%;
@@ -64,10 +75,10 @@ body{
   position: absolute;
   left: 13%;
   width: 73%;
-  top: 5%;
   background-color: transparent;
   text-align: center;
-  color: rgb(255, 154, 71);
+  color: rgb(199, 109, 36);
+  text-shadow: 3px 3px rgb(62, 1, 65);
 }
 h1{
   font-size: x-large;
